--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=.:* npm run devstart"
+    "serverstart": "DEBUG=.:* npm run devstart",
+    "test": "mocha --timeout 5000 --recursive --exit --ui tdd tests/"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-async-handler": "^1.2.0",
+    "http-errors": "^2.0.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
     "chai": "^4.3.8",
     "chai-http": "^4.4.0",
     "mocha": "^10.2.0"
-  }
+  },
+  "license": "MIT"
 }
